--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">  <script type="text/javascript" src="carretera.js"></script>
-    <!--<script type="text/javascript" src="carretera.js"></script>-->
-    <script type="text/javascript" src="script.js"></script>
+  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+  <script type="text/javascript" src="carretera.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
   <div class="game-intro">
     <img src="./images/logo.png" alt="" class="logo-img">
@@ -20,9 +22,10 @@
     <img src="./images/arrows.png" alt="" class="arrows-img">
   </div>
   <div id="game-board">
-      <canvas id="race-game"></canvas>
+    <canvas id="race-game"></canvas>
 
   </div>
 
 </body>
+
 </html>
